--- a/glossar.tex
+++ b/glossar.tex
@@ -3,6 +3,7 @@
 \newacronym{api}{API}{\textit{application programming interface}}
 \newacronym{alu}{ALU}{\textit{arithmetic logic unit}}
 \newacronym{apu}{APU}{\textit{accelerated processing unit}}
+\newacronym{blas}{BLAS}{\textit{Basic Linear Algebra Subprograms}}
 \newacronym{clb}{CLB}{\textit{configurable logic block}}
 \newacronym{cmt}{CMT}{\textit{clock management tile}}
 \newacronym{cpu}{CPU}{\textit{central processing unit}}
